Setup routes, states, and skeleton of high level navigation. Included OAuth signup and login for Github and Twitter

--- a/browser/scss/components/navbar.scss
+++ b/browser/scss/components/navbar.scss
@@ -5,6 +5,14 @@
     height: 4vh;
     background-color: #f0f0f0;
     
+    .logo {
+    	float: left;
+    }
+
+    form {
+    	float: left;
+    }
+
     ul {
     	float: right;
     }
