--- a/browser/scss/project/_view.scss
+++ b/browser/scss/project/_view.scss
@@ -12,6 +12,12 @@
   label {
     margin-bottom: .7rem;
   }
+  img {
+    margin-top: .5rem;
+    margin-right: .5rem;
+    width: 15%;
+    height: 15%;
+  }
 
 }
 
