added hello bar and broke navbar into directives

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -23,6 +23,7 @@ http://www.unitedworks.us
 @import 'common/footer';
 @import 'common/navbar';
 @import 'common/auth';
+@import 'common/hello';
 @import 'showcase/main';
 @import 'project/tile';
 @import 'project/view';
