--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -28,6 +28,7 @@ http://www.unitedworks.us
 @import 'project/tile';
 @import 'project/view';
 @import 'project/editor';
+@import 'search/main';
 @import 'showcase/main';
 @import 'profile/main';
 @import 'create/main';
