--- a/browser/scss/common/_navbar.scss
+++ b/browser/scss/common/_navbar.scss
@@ -14,6 +14,7 @@
         letter-spacing: -.1rem;
         padding-right: 2.0rem;
         margin-top: .2rem;
+        cursor: pointer;
     }
 
     a {
@@ -55,6 +56,7 @@
     li {
         padding-left: 1rem;
         text-decoration: underline;
+        cursor: pointer;
     }
 }
 
